# crypto-lab-shadow-vault

./: .gitignore  AUDIT.md  INVARIANTS.md  README.md  SECURITY.md  SPEC.md  THREAT_MODEL.md  improvements.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml  pages.yml  security-tests.yml
crate/: Cargo.toml  deny.toml
crate/src/: lib.rs
public/: argon2.worker.js  shadow_vault_crypto.js  shadow_vault_crypto_bg.wasm  vault.worker.js
scripts/: copy-wasm.mjs
src/: main.ts  style.css
src/crypto/: argon2.ts  chacha20poly1305.ts  container.ts  wasm.ts
src/derive/: keys.ts
src/types/: argon2-browser.d.ts  vault.ts
src/ui/: decrypt.ts  encrypt.ts  params.ts  tabs.ts  visualizer.ts
tests/browser/: vault.spec.ts
