[package]
name = "shadow-vault-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = "1"
sha2 = "0.10"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
